# Pneumonia-Detection-using-Vision-Transformers

./: Pneumonia Detection using Vision Transformers.ipynb  README.md  git.txt  how_to_run.docx  pyproject.toml
Notebooks/: Pneumonia Detection using Vision Transformers.ipynb
Report/: IntrotoBioinformaticsReport.docx  description.docx  report_2022-12-05.csv
pneumonia/: asgi.py  settings.py  urls.py  wsgi.py
predict/: apps.py  urls.py  views.py
